node-ports-only/foo_bar_com/bar-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: bar-service
spec: 
  type: NodePort
  selector: 
    app: bar
  ports: 
    - port: 8081
      targetPort: 80
      nodePort: 30002
