node-ports-only/foo_bar_com/foo.service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: foo-service
spec: 
  type: NodePort
  selector: 
    app: foo
  ports: 
    - port: 8080
      targetPort: 80
      nodePort: 30001
