node-ports-only/foo_bar_com/rules-ingess.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-bar-path-rules-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foo-service
            port:
              number: 8080
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar-service
            port:
              number: 8081
